--- a/src/components/search-bar.css
+++ b/src/components/search-bar.css
@@ -2,17 +2,39 @@
 
 }
 
+.search-bar__content {
+  display: flex;
+}
+
 .search-bar__input {
-  width: 100%;
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   color: #777;
   outline: 0;
   transition: all 100ms ease-in;
   box-shadow: 0 0 20px rgba(0,0,0,.1);
+  flex-grow: 2;
 }
 
 .search-bar__input:focus {
+  border: 1px solid lightcoral;
+}
+
+.search-bar__button {
+  border: 0;
+  border: 1px solid #ccc;
+  color: #777;
+  background-color: transparent;
+  transition: all 100ms ease-in;
+  box-shadow: 0 0 20px rgba(0,0,0,.1);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  outline: 0;
+}
+
+.search-bar__button:focus {
   border: 1px solid lightcoral;
 }
