--- a/src/components/selected-video.css
+++ b/src/components/selected-video.css
@@ -1,5 +1,5 @@
 .video {
-  margin-top: 2em;
+  margin: 2em 0;
 }
 
 /* For more info about responsive iframe, check the link below:
@@ -18,4 +18,17 @@
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.video__details {
+
+}
+
+.video__details h2 {
+  font-size: 1.5em;
+}
+
+.video__details p {
+  color: #999;
+  font-size: .8em;
 }
