--- a/src/components/video-list-item.css
+++ b/src/components/video-list-item.css
@@ -1,8 +1,19 @@
 .video-list-item {
-  border: 1px solid transparent;
-  padding: 1em;
+  width: calc(100%/3);
+  flex-grow: 1;
+  transition: all .2s ease-out;
+}
+
+.video-list-item:hover {
+  cursor: pointer;
+  background-color: rgba(100,100,100, 0.1);
 }
 
 .video-list-item__thumbnail {
   width: 100%;
+}
+
+.video-list-item__title {
+  font-weight: bold;
+  text-align: center;
 }
