--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,16 @@ body {
   background-color: #444;
   color: #f4f4f4;
 }
+
+p {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lato', sans-serif;
+}
